# da4-assignment2

./: DA4_Assignment_2_Uladzislau_Ramaniuk.tex  README.md  analysis.py  main.py  pyproject.toml  requirements.txt
data/: wdi_raw.csv  wdi_raw_meta.csv
